Remove unused Identity template controllers, viewmodels, and views.

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 @using Ballotbox
 @using Ballotbox.Models
-@using Ballotbox.ViewModels.Account
-@using Ballotbox.ViewModels.Manage
+@using Ballotbox.ViewModels
 @using Microsoft.AspNet.Identity
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
