--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,10 @@
 <div id="ballotbox"></div>
 
 @{
+    <script>
+        var app = {
+            isLoggedIn: @Json.Serialize(ViewData["IsLoggedIn"]),
+        };
+    </script>
     <script src="~/js/app.js"></script>
 }
