--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,9 +6,7 @@
 
 @{
     <script>
-        var app = {
-            isLoggedIn: @Json.Serialize(ViewData["IsLoggedIn"]),
-        };
+        localStorage.setItem('isAuthenticated', @Json.Serialize(ViewData["IsLoggedIn"]));
     </script>
     <script src="~/js/app.js"></script>
 }
