--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Ballotbox
 @using Ballotbox.Models
 @using Ballotbox.ViewModels
-@using Microsoft.AspNet.Identity
-@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@using Microsoft.AspNetCore.Identity
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
