Add font-awesome and gulp task.

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,5 +1,6 @@
-$icon-font-path: "../fonts/bootstrap/";
+$icon-font-path: "../fonts/";
 @import "bootstrap";
+@import "font-awesome";
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 
 body {
