--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="ballotbox"></div>
+<div id="react-app" asp-prerender-module="ClientApp/boot-server"
+     asp-prerender-webpack-config="webpack.config.js">Loading...</div>
 
-@{
-    <script>
-        localStorage.setItem('isAuthenticated', @Json.Serialize(ViewData["IsLoggedIn"]));
-    </script>
-    <script src="~/js/app.js"></script>
+@section scripts {
+    <script src="~/dist/main.js" asp-append-version="true"></script>
 }
