--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,13 +1,17 @@
-﻿<!doctype html>
-<html lang="">
+﻿<!DOCTYPE html>
+<html>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - Ballotbox</title>
-        <link rel="stylesheet" href="~/css/app.css" />
+
+        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
     </head>
     <body>
-        @RenderBody()     
+        @RenderBody()
+
+        <script src="~/dist/vendor.js" asp-append-version="true"></script>
         @RenderSection("scripts", required: false)
     </body>
 </html>
