--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Ballotbox.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
