Hydrate a redux store withViewData.

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 @using Ballotbox
 @using Ballotbox.Models
 @using Ballotbox.ViewModels
+@using Ballotbox.Helpers
 @using Microsoft.AspNetCore.Identity
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
+@addTagHelper "*, BallotboxCore"
+
+
