--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div id="react-app" asp-prerender-module="ClientApp/boot-server"
-     asp-prerender-webpack-config="webpack.config.js">Loading...</div>
+     asp-prerender-webpack-config="webpack.config.js"
+     asp-prerender-hydrate-with=@ViewData>Loading...</div>
 
 @section scripts {
     <script src="~/dist/main.js" asp-append-version="true"></script>
