--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,9 +1,7 @@
 @using Ballotbox
 @using Ballotbox.Models
 @using Ballotbox.ViewModels
-@using Ballotbox.Helpers
 @using Microsoft.AspNetCore.Identity
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@addTagHelper "*, BallotboxCore"
-
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
 
